# daraz-scraper

./: GUI_App.py  README.md  headphone_items.csv  laptop_items.csv  main.py  models.py  pyproject.toml
