[tool.poetry]
name = "daraz-scraper"
version = "0.0.1"
description = "It scraps product information from daraz"
authors = ["Kazal Chandra Barman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
